# garfield

./: .gitignore  .travis.yml  README.rst  requirements.txt  tox.ini
garfield/: .coveragerc  manage.py  pytest.ini  setup.cfg
garfield/bots/: admin.py  models.py  tasks.py  urls.py  views.py
garfield/bots/migrations/: 0001_initial.py  0002_auto_20180723_2008.py  0003_bot_answers.py
garfield/bots/tests/: test_models.py  test_tasks.py  test_views.py
garfield/contacts/: admin.py  models.py  tasks.py
garfield/contacts/migrations/: 0001_initial.py  0002_contact_related_phone_numbers.py  0003_auto_20180313_2001.py  0004_auto_20180411_2124.py  0005_auto_20180413_2113.py  0006_auto_20180423_1629.py  0007_contact_recruiter.py  0008_contact_phone_number_quick_copy.py
garfield/contacts/templates/: sms_notification_nextcaller_identity.html  sms_notification_nextcaller_location.html  sms_notification_whitepages_identity.html
garfield/dashboard/: monthly.py  scoreboard.py  tasks.py  util.py  weekly.py
garfield/deterrence/: admin.py  apps.py  models.py  tasks.py  urls.py  util.py  views.py
garfield/garfield/: celery.py  local.sample  settings.py  urls.py  wsgi.py
garfield/johns/: admin.py  apps.py  models.py
garfield/lookup/: admin.py  lookup_constants.py  models.py  tests.py  urls.py  views.py
garfield/phone_numbers/: admin.py  apps.py  models.py  tasks.py
garfield/sims/: admin.py  models.py  tests.py  urls.py  views.py
garfield/sms/: admin.py  decorators.py  models.py  tasks.py  urls.py  views.py
garfield/voice/: admin.py  models.py  tasks.py
(+69 files in other folders)
