[metadata]
description-file = README.rst

[tool:pytest]
DJANGO_SETTINGS_MODULE = garfield.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov --cov-report term-missing --flake8 --maxfail=2
norecursedirs =
    .git
    .tox
    .env
    .virtualenvs
    .virtualenv
    venv
    dist
    build
    south_migrations
    migrations
    example
flake8maxlinelength = 80
flake8-ignore = 
    E402    # module level import not at top of file
    W504
    **/migrations/** ALL
    manage.py ALL
    settings.py ALL
    sms/decorators.py F821
